# aycppgen

./: .dockerignore  MANIFEST.in  README.md  aycppgen.py  dockerfile  requirements.txt  setup.py  test.sh
aycppgen_core/: FileSystemEntry.py  InterfaceManager.py  config.py  generator.py  linuxfilesystem.py  logginghelper.py  projectmanager.py  wrapfilesystem.py
aycppgen_core/project_template/: CMakeLists.txt
aycppgen_core/project_template/docs/: Architecture.drawio
aycppgen_core/project_template/sources/template_project_name/: CMakeLists.txt
aycppgen_core/project_template/sources/template_project_nameAdapter/Topic/: content.cpp
aycppgen_core/project_template/sources/template_project_nameAdapter_demo/: CMakeLists.txt
aycppgen_core/project_template/sources/template_project_nameAdapter_demo/Foo/: Foo.cpp
aycppgen_core/project_template/sources/template_project_nameCore/: CMakeLists.txt
aycppgen_core/project_template/sources/template_project_nameCore/Topic/: content.cpp  content.hpp
aycppgen_core/templates/interface/: template_interface_name.hpp
aycppgen_core/templates/project/sources/template_project_name/: main.cpp
aycppgen_core/templates/project/sources/template_project_nameAdapter/: CMakeLists.txt
aycppgen_core/templates/project/sources/template_project_nameAdapter/Topic/: content.hpp
aycppgen_core/templates/project/sources/template_project_nameAdapter_demo/: main.cpp
aycppgen_core/templates/project/sources/template_project_nameAdapter_demo/Foo/: Foo.hpp
aycppgen_core/templates/project/sources/template_project_nameCore_test/: CMakeLists.txt
aycppgen_core/templates/project/sources/template_project_nameCore_test/Topic/: content.cpp
aycppgen_gui/: controller.py  layouts.py
tests/: test_InterfaceManager.py  test_filesystementry.py  test_generator.py  test_wrapfilesystem.py
tests/test_interfacemanager_data/: IAppliedInterfaceName.hpp
